# job-search-bot

./: .dockerignore  .env.example  .gitignore  README.md  _test_mcp_full.py  bootstrap.py  config.py  db.py  discovery.py  jobs.db  main.py  pyproject.toml  requirements.txt  resume.txt  resume.txt.example
.claude/: settings.local.json
.github/workflows/: hourly.yml
.kiro/settings/: mcp.json
.kiro/steering/: job-search.md
bot/: config.py
docs/: PHASE2_SPEC.md
logs_78061305643/: 0_run-bot.txt
logs_78061305643/run-bot/: 13_Post Run actions_setup-python@v5.txt  14_Post Run actions_checkout@v4.txt  15_Complete job.txt  1_Set up job.txt  2_Run actions_checkout@v4.txt  3_Run actions_setup-python@v5.txt  4_Install dependencies.txt  5_Write local files from secrets.txt  6_Run job search bot.txt  7_Persist seen-jobs database.txt  system.txt
mcp-wrapper/: Dockerfile  README.md  TOOLS.md  http_server.py  server.py  tools.py
