# Root pyproject.toml
#
# Rationale: This monorepo contains two packages:
#   1. bot/ — the job search pipeline (standalone, no build system needed)
#   2. mcp-wrapper/ — MCP protocol adapter (installable package)
#
# The root pyproject.toml provides a single install point with optional extras.
# Install the bot alone: pip install -e .
# Install with MCP wrapper: pip install -e ".[mcp]"

[project]
name = "job-search-bot"
version = "1.0.0"
description = "Automated job search bot with hybrid AI scoring — scrapes, scores, and emails tailored applications"
readme = "README.md"
requires-python = ">=3.11"
license = {text = "MIT"}
authors = [
    {name = "Vinay J Rao", email = "vinayjrao96@gmail.com"},
]
keywords = ["job-search", "automation", "gemini-ai", "mcp", "apify"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "Topic :: Office/Business",
    "Programming Language :: Python :: 3.11",
]

dependencies = [
    "requests>=2.32.0",
    "google-genai>=1.47.0",
    "python-dotenv>=1.0.0",
]

[project.optional-dependencies]
mcp = ["job-search-bot-mcp @ file:./mcp-wrapper"]
dev = ["pytest", "pytest-asyncio"]

[project.urls]
Homepage = "https://github.com/vinayjrao96/job-search-bot"
Repository = "https://github.com/vinayjrao96/job-search-bot"
Issues = "https://github.com/vinayjrao96/job-search-bot/issues"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["bot"]
